@@ -1,3 +1,6 @@
+Aug 20, 2020
+  -added handling of transcript versions in table STABLE_TRANSCRIPTS
+
 Aug 05, 2020
   -qc: fix: Ensembl transcripts are no longer removed from genes
 
